# mipt-5-grade-jit-aot

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/ir/: basic_block.cpp  basic_block.h  graph.cpp  graph.h  instruction.cpp  instruction.h  ir.h  ir_builder.cpp  ir_builder.h  types.h
src/ir/analysis/: bounds_analysis.cpp  bounds_analysis.h  graph_analyzer.cpp  graph_analyzer.h  linear_order.cpp  linear_order.h  live_interval.cpp  live_interval.h  liveness_analyzer.cpp  liveness_analyzer.h  loop.cpp  loop.h  loop_analyzer.cpp  loop_analyzer.h
src/ir/opt/: checks_elimination.cpp  checks_elimination.h  inliner.cpp  inliner.h  peephole_optimizer.cpp  peephole_optimizer.h  register_allocator.cpp  register_allocator.h
tests/: CMakeLists.txt  basic_ir_test.cpp  checks_elimination_test.cpp  dump_ir_main.cpp  factorial_test.cpp  graph_analyzer_test.cpp  inliner_test.cpp  linear_order_test.cpp  liveness_analysis_test.cpp  optimization_test.cpp  register_allocator_test.cpp  use_def_test.cpp
tests/helpers/: factorial_graph.cpp  factorial_graph.h
